--- a/reference/Syllabus_api.yaml
+++ b/reference/Syllabus_api.yaml
@@ -62,3 +62,33 @@ components:
           type: string
         '':
           type: string
+    Student:
+      title: Student
+      type: object
+      description: 'Classe Student extends User '
+      properties:
+        studentID:
+          type: integer
+        PAE:
+          type: array
+          items: {}
+    Teacher:
+      title: Teacher
+      type: object
+      description: Classe Teacher extends User
+      properties:
+        trigram:
+          type: string
+        courses:
+          type: array
+          items: {}
+    User:
+      title: User
+      type: object
+      properties:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
