--- a/reference/Syllabus_api.yaml
+++ b/reference/Syllabus_api.yaml
@@ -13,7 +13,7 @@ components:
     Course:
       title: Course
       type: object
-      description: 'Classe course '
+      description: Course class
       properties:
         '':
           type: string
