--- a/reference/Syllabus_api.yaml
+++ b/reference/Syllabus_api.yaml
@@ -3,6 +3,7 @@ info:
   title: Syllabus_api
   version: '1.0'
   termsOfService: 'https://github.com/smarbal/syllabus-webservice.git'
+  description: ''
 servers:
   - url: 'https://api.ecam.be/syllabus-webservice'
 paths:
@@ -304,6 +305,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/Course'
       description: Set name for course
+  '/Database/{Connection}':
+    parameters:
+      - schema:
+          type: string
+        name: Connection
+        in: path
+        required: true
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: Post found
+        '404':
+          description: Requested was not found
+      operationId: get-Database-Connection
+      description: Get database Connection
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Database'
 components:
   schemas:
     Course:
@@ -400,3 +423,10 @@ components:
           type: string
         email:
           type: string
+    Database:
+      title: Database
+      type: object
+      description: Class Database
+      properties:
+        Connection:
+          type: integer
