--- a/reference/Syllabus_api.yaml
+++ b/reference/Syllabus_api.yaml
@@ -7,11 +7,11 @@ info:
 servers:
   - url: 'https://api.ecam.be/syllabus-webservice'
 paths:
-  '/Course/{name}':
+  '/Course/{id}':
     parameters:
       - schema:
           type: string
-        name: name
+        name: id
         in: path
         required: true
     get:
@@ -305,6 +305,8 @@ components:
           syllabi:
             - null
       properties:
+        id:
+          type: string
         '':
           type: string
         teachers:
@@ -317,7 +319,7 @@ components:
           items: {}
         academic_year:
           type: string
-        syllabi:
+        documents:
           type: array
           items: {}
     Document:
@@ -342,7 +344,7 @@ components:
         orderID:
           type: integer
         student: {}
-        syllabi:
+        documents:
           type: array
           items: {}
         orderDate: {}
