Refactor some shit causing html rendering bugs

--- a/reference/Syllabus_api.yaml
+++ b/reference/Syllabus_api.yaml
@@ -192,7 +192,7 @@ components:
       description: Course class
       examples: []
       properties:
-        '':
+        name:
           type: string
         teachers:
           type: array
