--- a/reference/Syllabus_api.yaml
+++ b/reference/Syllabus_api.yaml
@@ -1,9 +1,9 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: Syllabus_api
   version: '1.0'
   termsOfService: 'https://github.com/smarbal/syllabus-webservice.git'
-  description: ''
+  description: 'This documentation refers to the syllabus webservice API. Please note that the API is not currently implemented in the webservice, however this documentation can be used as a schema when it gets implemented in the future.'
 servers:
   - url: 'https://api.ecam.be/syllabus-webservice'
 paths:
